--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item">
-            <a href="/Portfolio1/index.html" class="nav-link">Home</a>
+            <a href="/Portfolio1" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="about.html" class="nav-link">About Me</a>
